fix(audio-player): adjust slider handle dimensions and alignment
- Updated `.noUi-handle` dimensions in `audio-player.less` to 4x4px.
- Adjusted handle alignment with `right: 0` and `top: 0`.
- Added `connect: [true, false]` option in `Slider.js` for better slider behavior.

--- a/less/ui-components/audio-player.less
+++ b/less/ui-components/audio-player.less
@@ -229,8 +229,10 @@
 		box-shadow: none;
 
 		.noUi-handle {
-			width: 15px;
-			height: 15px;
+			width: 4px;
+			height: 4px;
+			right: 0;
+			top: 0;
 			cursor: pointer;
 
 			background: @color-red;
